testsuite/tests/lkt/import/invalid/conflict_3.lkt
from common import *
from common import myvar

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}

class Example: FooNode implements TokenNode {
}
